--- a/input.html
+++ b/input.html
@@ -46,6 +46,7 @@
                     <input type="submit" value="Google Search">
                     <input type="submit" value="I'm Feeling Lucky">
                 </form> 
+                </div>
             </div>
         </div>
         
