--- a/input.html
+++ b/input.html
@@ -10,6 +10,7 @@
                 display: flex;
                 justify-content: flex-end;
                 padding: 10px;
+                gap: 7px;
             }
             .centerpiece {
                 margin-top: -80px;
@@ -23,7 +24,7 @@
                 width: 380px;
                 height: 20px;
                 border-radius: 10px;
-                padding-left: 25px; 
+                padding-left: 20px; 
             }
 
             .logo {
@@ -34,8 +35,8 @@
     </head>
     <body>
         <div class="pageheader">
-            <input type="submit" value="Image Search">
-            <input type="submit" value="Advanced Search">
+            <a href="https://www.google.com/imghp">Image Search</a>
+            <a href="https://www.google.com/advanced_search">Advanced Search</a>
         </div>
         <div class="centerpiece">
             <div style="text-align: center;">
